tests/neg/preview-message.check
-- Error: tests/neg/preview-message.scala:15:2 -------------------------------------------------------------------------
15 |  f1() // error
   |  ^^
   |  method f1 is marked @preview
   |
   |  Preview definition may only be used under preview mode:
   |    1. in a definition marked as @preview, or
   |    2. a preview feature is imported at the package level, or
   |    3. compiling with the -preview compiler flag.
-- Error: tests/neg/preview-message.scala:16:2 -------------------------------------------------------------------------
16 |  f2() // error
   |  ^^
   |  method f2 is marked @preview
   |
   |  Preview definition may only be used under preview mode:
   |    1. in a definition marked as @preview, or
   |    2. a preview feature is imported at the package level, or
   |    3. compiling with the -preview compiler flag.
-- Error: tests/neg/preview-message.scala:17:2 -------------------------------------------------------------------------
17 |  f3() // error
   |  ^^
   |  method f3 is marked @preview: not yet stable
   |
   |  Preview definition may only be used under preview mode:
   |    1. in a definition marked as @preview, or
   |    2. a preview feature is imported at the package level, or
   |    3. compiling with the -preview compiler flag.
